Fix dropdowns not fitting open at search sidebar

--- a/modules/search/client/less/sidebar.less
+++ b/modules/search/client/less/sidebar.less
@@ -49,6 +49,12 @@
   }
 }
 
+.search-sidebar-filters {
+  // Adds extra space under filters so that any dropdowns fit open
+  // E.g. language filter has a big dropdown
+  padding-bottom: 250x;
+}
+
 // Push sidebar down a bit when sitewide announcements are visible.
 // See `modules/core/client/less/layout/site-announcement.less` for more.
 body.is-site-announcement-visible {
